<resources>
    <string name="app_name">MokoBeacon</string>
    <string name="device_list_title">Devices</string>
    <string name="device_list_title_num">Devices(%d)</string>
    <string name="device_list_filter_hin">Filter by device name or MAC address</string>
    <string name="about_moko_url">www.mokosmart.com</string>
    <string name="about_moko_name">Moko Technology LTD.</string>
    <string name="device_info_conn_status_disconnect">DISCONNECT</string>
    <string name="device_info_conn_status_connect">CONNECT</string>
    <string name="device_info_title">Parameters</string>
    <string name="main_password_title">Please enter password</string>
    <string name="password_null">Password cannot be empty!</string>
    <string name="main_password_length">The password should be 8 characters</string>
    <string name="change_password_length">The password should be 8 characters.Please try again</string>
    <string name="change_password_match">Password do not match!Please try again.</string>
    <string name="cancel">Cancel</string>
    <string name="ensure">OK</string>
    <string name="confirm">Confirm</string>
    <string name="setting_syncing">syncing</string>
    <string name="alert_diconnected">Device disconnect</string>
    <string name="device_info_cannot_modify">Read only</string>
    <string name="device_info_battery">Battery percentage</string>
    <string name="device_info_uuid">UUID</string>
    <string name="device_info_major">MAJOR</string>
    <string name="device_info_minor">MINOR</string>
    <string name="alert_data_cannot_null">To modify the name cannot be empty.</string>
    <string name="read_data_failed">Read data error</string>
    <string name="device_info_measure_power">RSSI@1m</string>
    <string name="device_info_measure_power_title">RSSI@1m</string>
    <string name="device_info_transmission">Transmission Power</string>
    <string name="tips_transmission">Tips:The higher power,the greater signal coverage,but power consumption is higher.After modifying the parameters, click the upper right button to save.</string>
    <string name="device_info_broadcast_interval">Broadcasting Interval</string>
    <string name="alert_broadcast_interval_range">Reasonable range of 1~100</string>
    <string name="alert_measure_power_range">Reasonable range of -120~0.</string>
    <string name="tips_broadcast_interval">Tip:iBeacon is easy to be scanned and connected if the broadcast time is short,but power consumption is also higher.Reasonable range of 1~100.After modifying the parameter, click the upper right button to save.</string>
    <string name="transmission_grade_0">Highest</string>
    <string name="transmission_grade_0_power">power:4dBm</string>
    <string name="transmission_grade_0_range">radius:90m</string>
    <string name="transmission_grade_1">1</string>
    <string name="transmission_grade_1_power">power:0dBm</string>
    <string name="transmission_grade_1_range">radius:50m</string>
    <string name="transmission_grade_2">2</string>
    <string name="transmission_grade_2_power">power:-4dBm</string>
    <string name="transmission_grade_2_range">radius:27m</string>
    <string name="transmission_grade_3">3</string>
    <string name="transmission_grade_3_power">power:-8dBm</string>
    <string name="transmission_grade_3_range">radius:22m</string>
    <string name="transmission_grade_4">4</string>
    <string name="transmission_grade_4_power">power:-12dBm</string>
    <string name="transmission_grade_4_range">radius:15m</string>
    <string name="transmission_grade_5">5</string>
    <string name="transmission_grade_5_power">power:-16dBm</string>
    <string name="transmission_grade_5_range">radius:10m</string>
    <string name="transmission_grade_6">6</string>
    <string name="transmission_grade_6_power">power:-20dBm</string>
    <string name="transmission_grade_6_range">radius:7m</string>
    <string name="transmission_grade_7">7</string>
    <string name="transmission_grade_7_power">power:-30dBm</string>
    <string name="transmission_grade_7_range">radius:2m</string>
    <string name="transmission_grade_8">8</string>
    <string name="transmission_grade_8_power">power:-40dBm</string>
    <string name="transmission_grade_8_range">radius:1m</string>
    <string name="broadcast_interval_input">Input:</string>
    <string name="broadcast_interval_unit">units:100ms</string>
    <string name="please_select_grade">Please Select</string>
    <string name="device_info_device_id">Device ID</string>
    <string name="tips_device_id">Tip：Input range：0-99999. After modifying the parameter, click the upper right button to save.</string>
    <string name="device_info_mac">MAC Address</string>
    <string name="device_info_ibeacon_name">iBeacon Name</string>
    <string name="tips_ibeacon_name">Tip：Up to 10 characters can be entered. After modifying the parameter, click the upper right button to save.</string>
    <string name="tips_ibeacon_name_three_axis">Tip：Up to 4 characters can be entered. After modifying the parameter, click the upper right button to save.</string>
    <string name="device_info_connection_mode">Connectable</string>
    <string name="device_info_password">Modify Password</string>
    <string name="tips_password">Tip：Password must be 8 characters. After modifying the parameter, click the upper right button to save.</string>
    <string name="password_input_title">New Password</string>
    <string name="password_input">New Password</string>
    <string name="password_input_confirm_title">New Password</string>
    <string name="password_input_confirm">New Password</string>
    <string name="password_error">param error</string>
    <string name="device_info_system">Device Information</string>
    <string name="alert_click_reconnect">Device is disconnected, pls click \"Disconnect\" on the top to reconnect.</string>
    <string name="dialog_connecting">Connecting...</string>
    <string name="system_firmname">Manufacture</string>
    <string name="system_device_name">Product Model</string>
    <string name="system_ibeacon_date">Production Date</string>
    <string name="system_chip_mode">Chip Model</string>
    <string name="system_hardware_version">Hardware Version</string>
    <string name="system_firmware_version">Firmware Version</string>
    <string name="system_soft_version">Software Version</string>
    <string name="system_ibeacon_runtime">Running Time</string>
    <string name="about_title">About us</string>
    <string name="version_info">Version:%s</string>
    <string name="uuid_airlocate">AirLocate</string>
    <string name="uuid_wechat">WeChat</string>
    <string name="uuid_estimote">Estimote</string>
    <string name="decimalism">Decimal</string>
    <string name="hexadecimal_title">"Hex(0x)</string>
    <string name="hexadecimal">Hex</string>
    <string name="tips_minor">Tip：Input range：0-65535. After modifying the parameter, click the upper right button to save.</string>
    <string name="tips_measure_power">Tip：Input range：-120-0. After modifying the parameter, click the upper right button to save.</string>
    <string name="alert_minor_range">Reasonable range of 0-65535.</string>
    <string name="tips_connection_mode">Tip:YES:iBeacon is connectable.NO:iBeacon isn\'t connectable</string>
    <string name="device_info_three_axis">3-Axis Accelerometer</string>
    <string name="permission_storage_close_content">Please find it in cellphone setting- permission, and allow MokoBeacon use the Storage and location permission</string>
    <string name="permission_ble_close_content">Please find it in cellphone setting- permission, and allow MokoBeacon use the bluetooth and location permission</string>
    <string name="permission_storage_close_title">Storage permission is not available</string>
    <string name="permission_open">OK</string>
    <string name="permission_storage_need_title">Please turn on Storage permissions</string>
    <string name="permission_storage_need_content">MokoBeacon requires access to Location and Storage permission. If the permissions are not on, MokoBeacon cannot be used normally.</string>
    <string name="permission_ble_content">MokoBeacon requires access to bluetooth scan contract and location permission. If the permissions are not on, MokoBeacon cannot be used normally.</string>
    <string name="location_need_title">Turn on Location permission</string>
    <string name="location_need_content">After that, MokoBeacon could search and connect with the iBeacon</string>
    <string name="permission_location_close_title">Location persission is not available</string>
    <string name="permission_location_close_content">Please find it in cellphone setting- permission, and allow MokoBeacon use the Location and Storage permission</string>
    <string name="permission_location_need_title">Turn on Location permission</string>
    <string name="permission_location_need_content">After that, MokoBeacon could search and connect with the iBeacon</string>
    <string name="disconnect_alert">The device is disconnected. Please click the “CONNECT” on the top to reconnect.</string>
    <string name="device_info_power">Power Off</string>
</resources>
