<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/blue_5691fc">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/device_list_title"
            android:textColor="@color/white_ffffff"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_title"
            android:textColor="@color/white_ffffff"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="@color/white_ffffff">

        <ImageView
            android:id="@+id/moko_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/tv_soft_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/moko_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="@color/black_373737"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_moko_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:text="@string/about_moko_url"
            android:textColor="@color/blue_5691fc"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_moko_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_moko_url"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/about_moko_name"
            android:textColor="@color/black_333333" />
    </RelativeLayout>
</LinearLayout>