<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/blue_5691fc">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white_ffffff"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/device_info_broadcast_interval"
            android:textColor="@color/white_ffffff"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/iv_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/save" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="@color/grey_ebebeb"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/please_select_grade"
            android:textColor="@color/black_333333"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_broadcast_interval_1"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_radius_big_white_bg"
                android:gravity="center"
                android:tag="1"
                android:text="100ms"
                android:textColor="@color/blue_5691fc"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <TextView
                android:id="@+id/tv_broadcast_interval_2"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_radius_big_white_bg"
                android:gravity="center"
                android:tag="2"
                android:text="200ms"
                android:textColor="@color/blue_5691fc"
                android:textSize="15sp" />


            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <TextView
                android:id="@+id/tv_broadcast_interval_3"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_radius_big_white_bg"
                android:gravity="center"
                android:tag="3"
                android:text="300ms"
                android:textColor="@color/blue_5691fc"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tv_broadcast_interval_4"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_radius_big_white_bg"
                android:gravity="center"
                android:tag="4"
                android:text="400ms"
                android:textColor="@color/blue_5691fc"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <TextView
                android:id="@+id/tv_broadcast_interval_5"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_radius_big_white_bg"
                android:gravity="center"
                android:tag="5"
                android:text="500ms"
                android:textColor="@color/blue_5691fc"
                android:textSize="15sp" />


            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <TextView
                android:id="@+id/tv_broadcast_interval_6"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_radius_big_white_bg"
                android:gravity="center"
                android:tag="6"
                android:text="600ms"
                android:textColor="@color/blue_5691fc"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tv_broadcast_interval_7"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_radius_big_white_bg"
                android:gravity="center"
                android:tag="7"
                android:text="700ms"
                android:textColor="@color/blue_5691fc"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <TextView
                android:id="@+id/tv_broadcast_interval_8"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_radius_big_white_bg"
                android:gravity="center"
                android:tag="8"
                android:text="800ms"
                android:textColor="@color/blue_5691fc"
                android:textSize="15sp" />


            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <TextView
                android:id="@+id/tv_broadcast_interval_9"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_radius_big_white_bg"
                android:gravity="center"
                android:tag="9"
                android:text="900ms"
                android:textColor="@color/blue_5691fc"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <TextView
                android:id="@+id/tv_broadcast_interval_10"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_radius_big_white_bg"
                android:gravity="center"
                android:tag="10"
                android:text="1000ms"
                android:textColor="@color/blue_5691fc"
                android:textSize="15sp" />


            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_broadcast_interval"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:background="@drawable/shape_radius_grey_light_bg"
                android:digits="0123456789"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black_333333"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/et_broadcast_interval"
                android:text="@string/broadcast_interval_input"
                android:textColor="@color/blue_5691fc"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"
                android:layout_toRightOf="@id/et_broadcast_interval"
                android:text="@string/broadcast_interval_unit"
                android:textColor="@color/grey_737373"
                android:textSize="13sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/tips_broadcast_interval"
            android:textColor="@color/grey_737373"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>